JKD 11 migration. Compilation is OK